--- a/.github/workflows/pushToHostinger.yml
+++ b/.github/workflows/pushToHostinger.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.0.0
         with:
-          server: ${{ secrets.FTP_HOST }}
+          server: ftp://tom-pere.fun
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           serverDir: ${{ secrets.FTP_REMOTE_PATH }}
