--- a/.github/workflows/pushToHostinger.yml
+++ b/.github/workflows/pushToHostinger.yml
@@ -30,5 +30,5 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
-          serverDir: ${{ secrets.FTP_REMOTE_PATH }}
-          localDir: build
+          server-dir: ${{ secrets.FTP_REMOTE_PATH }}
+          local-dir: build
