--- a/.github/workflows/pushToHostinger.yml
+++ b/.github/workflows/pushToHostinger.yml
@@ -31,4 +31,4 @@ jobs:
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: ${{ secrets.FTP_REMOTE_PATH }}
-          local-dir: build
+          local-dir: build/
