feat : new favicon

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Among-Legends",
+  "name": "Among-Legends : roles for League of Legends",
   "icons": [
     {
       "src": "favicon.ico",
