feat : end vote + finito

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Among-Legends",
-  "name": "Among-Legends : roles for League of Legends",
+  "short_name": "Among Legends",
+  "name": "Among Legends",
   "icons": [
     {
       "src": "favicon.ico",
